# brandontools

./: CMakeLists.txt  ChangesLog.txt  INSTALL.txt  INSTALLREAD.txt  Makefile  README.md  cpercep.cpp  fortunes.hpp  install.sh  main.cpp  makeindexed.scm  mode3exporter.cpp  mode4exporter.cpp  palettegen.cpp  readme.odt  tests.sh  version.h
cli/: Makefile  Tile.hpp  color.cpp  color.hpp  dither.cpp  dither.hpp  exportfile.cpp  exportfile.hpp  fileutils.cpp  fileutils.hpp  fortunegen.cpp  fortunegen.hpp  fortunes.cpp  fortunes.hpp  headerfile.cpp  implementationfile.cpp  main.cpp  mapexporter.cpp  mediancut.cpp  mediancut.hpp  mode0exporter.cpp  mode0exporter16.cpp  mode0exporter256.cpp  mode3batchexporter.cpp  mode3exporter.cpp  mode4batchexporter.cpp  mode4exporter.cpp  palettegen.hpp  reductionhelper.cpp  reductionhelper.hpp  shared.cpp  shared.hpp  spritesexporter.cpp  tile.cpp  tile.hpp  tilesexporter.cpp  version.h
gui/: BrandonApp.cpp  BrandonApp.hpp  BrandonFrame.cpp  BrandonFrame.hpp  BrandonFrameGUI.cpp  BrandonFrameGUI.h  BrandonToolsEditor.fbp  BrandonToolsEditorGUI.cpp  BrandonToolsEditorGUI.h  BrandonToolsGUI.fbp  Makefile
